# sush

./: .env  .gitignore  .ninja_deps  .ninja_log  >  CMakeLists.txt  LICENSE  README.md  build.ninja  build.sh  name space seperated  shell  unit_tests  your_program.sh
src/: main.cpp
src/commands/ExecStatus/: allPaths.cpp  execStatus.cpp  isExecutable.cpp
src/commands/ExecutePrograms/: execute.cpp
src/commands/cd/: cd.cpp
src/commands/commandRegister/: commandRegister.cpp
src/commands/echo/: echo.cpp
src/commands/exit/: exit.cpp
src/commands/history/: history.cpp  recordHist.cpp
src/commands/include/: builtins.h  commandRegister.h  echo.h  execStatus.h  recordHist.h
src/commands/pwd/: pwd.cpp
src/commands/type/: type.cpp
src/internal/service/cmdParser/: cmdParser.cpp
src/internal/service/expander/: expander.cpp
src/internal/service/fsplit/: fsplit.cpp
src/internal/service/include/: cmdParser.h  expander.h  fsplit.h  lexer.h  parser.h  redirection.h
src/internal/service/lexer/: lexer.cpp
src/internal/service/parser/: parser.cpp
src/internal/service/redirection/: redirection.cpp
src/utils/include/: split.h
src/utils/split/: split.cpp
tests/: lexer_test.cpp
